<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNumbers"
        android:layout_width="211dp"
        android:layout_height="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="304dp"
            android:layout_weight="1"
            android:text="@string/btnDecimalText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/btnClearText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnZero" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/btnZeroText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTwo"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:text="@string/btnOneText"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btnTwo"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:text="@string/btnTwoText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btnThreeText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="112dp"
            android:layout_weight="1"
            android:text="@string/btnFourText"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btnFive"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="112dp"
            android:layout_weight="1"
            android:text="@string/btnFiveText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/btnSixText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_weight="1"
            android:text="@string/btnSevenText"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btnEight"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:layout_weight="1"
            android:text="@string/btnEightText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btnNineText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutOperators"
        android:layout_width="139dp"
        android:layout_height="373dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/layoutNumbers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnSum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/btnSum"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.136" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/btnMultiply"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSum"
            app:layout_constraintVertical_bias="0.061" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/btnSubtract"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
            app:layout_constraintVertical_bias="0.072"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnMod"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/btnMod"
            android:textSize="7sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract"
            app:layout_constraintVertical_bias="0.116"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:text="@string/btnDivide"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toEndOf="@+id/btnSum"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.136" />

        <Button
            android:id="@+id/btnPotencia"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:text="@string/btnPotencia"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toEndOf="@+id/btnMultiply"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide"
            app:layout_constraintVertical_bias="0.061" />

        <Button
            android:id="@+id/btnPorcentagem"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:text="@string/btnPorcentagem"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toEndOf="@+id/btnSubtract"
            app:layout_constraintTop_toBottomOf="@+id/btnPotencia"
            app:layout_constraintVertical_bias="0.072" />

        <Button
            android:id="@+id/btnRaiz"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="88dp"
            android:text="@string/btnRaiz"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toEndOf="@+id/btnMod"
            app:layout_constraintTop_toBottomOf="@+id/btnPorcentagem"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btnEquals"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="358dp"
        android:layout_height="149dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115">

        <TextView
            android:id="@+id/txtDisplayCalculation"
            android:layout_width="318dp"
            android:layout_height="78dp"
            android:background="@color/teal_700"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/txtCalculation"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstLayout"
        android:layout_width="358dp"
        android:layout_height="72dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutOperators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>